public_html/wp-content/themes/transcribathon/css/item-page.css
/* ... */
.edit-del-person {
    position: absolute;
    top: 5px;
    right: 20px;
}
.edit-del-link {
    position: absolute;
    top: 3px;
    right: 20px;
}
.person-i {
    font-size: 12px;
    color: var(--main-color);
    position: relative;
    top: 6px;
}
.person-description, .prop-desc {
    font-size: 13px;
    height: 15px;
    margin: 0!important;
    position: relative;
    bottom: 3px;
    padding-left: 16px;
    line-height: normal;
}
.person-btn-left,.person-btn-right {
    width: 50%;
    display: inline-block;
}
.person-btn-left button {
    float: left;
    border-radius: 0;
    position: absolute;
    top: 0;
    left: 0;
    font-weight: 700;
    font-size: 14px;
}
.person-btn-right button {
    float: right;
    border-radius: 0;
    position: absolute;
    top: 0;
    right: 0;
    font-weight: 700;
    font-size: 14px;
}
.location-display-container .location-single {
    padding: 5px 0;
}
.location-display-container .location-single p:first-of-type{
    border-bottom: 0.5px solid var(--bg-main-color);
    height: 17px;
}
#item-data-content .fas.fa-edit {
    display: none!important;
}
#enrich-view .fas.fa-edit, .description-view .fas.fa-edit {
    margin-left: 5px;
    cursor: pointer;
}
.location-single {
    padding: 5px 25px;
    background: #fff;
    margin-bottom: 10px;
    font-weight: 400;
    line-height: 1em!important;
    position: relative;
}
.location-single p {
    margin-left: 25px!important;
}
.location-single img {
    float:left;
    height:20px;
    position:absolute;
    top:7px;
}
.edit-delete-btns {
    width: 55px;
    float:right;
    position: absolute;
    top: 0px;
    right: 20px;
}
.edit-delete-btns i {
    display: inline-block;
}
.keyword-single:hover, .language-single:hover {
    display: inline-block;
    color: #fff;
    background-color: var(--main-color);
}
.keyword-single, .language-single {
    display: inline-block;
    color: #000;
    background-color: var(--bg-main-color);
    padding: 5px 10px;
    margin-top: 2px;
    margin-right: 5px;
    margin-bottom: 5px;
}
.dl-enrichments {
    position: relative;
    /* left: -25px; */
    margin-top: 17px;
    margin-bottom: 17px;
}
.date-top, .date-bottom {
    display: block;
    position: relative;
    bottom: 3px;
}
.date-top div {
    font-weight: 400;
    font-size: 13px!important;
}
.date-bottom {
    font-weight: 400;
    margin-top: 5px;
}
#item-data-section .document-date-container{
    display: none;
}
/* #item-date-container .item-date-inner-container, #item-date-container #item-date-save-button,
#item-date-container .creation-date-container {
    display: none;
} */
/* #item-date-container.show .item-date-inner-container, #item-date-container.show #item-date-save-button,
#item-date-container.show .creation-date-container {
    display: inline-block;
}
#item-date-container.show .document-date-container, #doc-type-area.show #doc-type-view,
#description-area.show .current-description, #description-area.show .description-language {
    display: none!important;
}
#item-date-container .document-date-container, #doc-type-area #doc-type-view,
#description-area .current-description, #description-area .description-language {
    display: block;
} */
/* --- Metadata --- */
.single-meta {
    padding: 5px 0px;
    border-bottom: 1px solid var(--bg-main-color);
    font-weight: 400;
}
p.mb-1 {
    color: var(--main-color);
    font-weight: 600;
    padding: 0!important;
    font-size: 14px;
    font-family: var(--h-font-family);
    margin: 0!important;
    margin-bottom: 0!important;
}
.meta-p {
    margin: 0!important;
    font-weight: 400;
    font-size: 14px;
}
#story-info {
    overflow: hidden;
    position: relative;
}
#info-tab .item-page-section-headline {
    padding-left: 25px;
}
#full-v-story-description {
    overflow-y: hidden;
}
#meta-container {
    padding-left: 25px;
}
#storydesc {
    padding-right: 35px;
    padding-left: 25px;
}
#meta-cover {
    cursor: pointer;
    width: calc(100% - 200px);
    font-size: 25px;
    background: #ffffff;
    position: absolute;
    color: var(--main-color);
    text-align: center;
    z-index: 9;
    bottom: 0px;
    margin-right: 100px;
}
/* --- Full Screen Css --*/
.item-page-section {
    padding: 5px 8px 8px 0;
    position: relative;
    margin-left: 30px;
}
.item-page-section-headline {
    font-size: 18px!important;
    margin-top: 0px!important;
    margin-bottom: 0px!important;
    padding: 8px 0px!important;
    display: inline-block!important;
    text-transform: uppercase!important;
    font-family: var(--h-font-family)!important;
    color: var(--main-color)!important;
    font-weight: 700!important;
    letter-spacing: 0.025em!important;
}
/*-- Status changers --*/
.section-status-changer {
    float: right;
    width: 100px;
    height: 25px;
    text-align: center;
    border-radius: 20px;
    position: relative;
    left: 10px;
}
.section-status-changer .status-indicator {
    position: relative;
    bottom: 2px;
}
.status-indicator {
    cursor: pointer;
    font-size: 10px!important;
    border: none!important;
    border-radius: unset!important;
    display: inline-block;
    width: 80px;
    font-family: var(--h-font-family);
    font-weight: 600;
    letter-spacing: 0.025em;
    line-height: normal;
}
.status-dropdown-content {
    top: 30px;
    left: -15px;
    display: none;
    position: absolute;
    background-color: #ffffff;
    min-width: 130px;
    overflow: auto;
    -webkit-box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
    box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
    z-index: 2;
    cursor: default;
}
.status-dropdown-option {
    padding: 5px 10px!important;
    display: block!important;
    font-size: 10px!important;
    text-align: left!important;
    cursor: pointer;
    line-height: 1.8em;
}
.status-dropdown-option:hover {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
/* ... */

